### 1.1.8 16-03-2017
* Fixed url query params for List data

### 1.1.7 15-03-2017
* Improved method List data for all resources
* Fixex Timeout for List data
* Added Enum CurrencyCode with the following values: PEN, USD
* Added Enum Reason with the following values: duplicado, fraudulento, solicitud_comprador

### 1.1.6 28-02-2017
* Fix Transfer URL
* List Method all resource befault limit 50
* List Method valid is null and also empty

### 1.1.5 24-02-2017
* Fix: list method

### 1.1.4 22-02-2017
* Change the default timeout of GET method 120 to 180
* set public_key and secret_key

### 1.1.3 13-02-2017
* Add Card
* Add Customer
* Add Event
* Add Transfer
* Add method capture for Charge
* Add method update

### 1.1.2 25-01-2017
* Remove Apache HTTP Component
* Add OkHttp
* Add List, Get, Delete

### 1.1.1 17-01-2017
* Update Create Token

### 1.1 16-01-2017
* Make simple events
* Improve all the code

### 1.0 07-01-2017
* Create Token
* Create Charge
* Create Plan
* Create Subscription
* Create Refund
* Unit Tests